--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.4",
     "webpack-stream": "5.1.0",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-router-dom": "^4.2.7",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-responsive-carousel": "^3.1.41",
-    "react-router-dom": "^4.3.1",
-    "react-text-truncate": "^0.13.1"
+    "@types/react": "16.4.6",
+    "@types/react-dom": "16.0.6",
+    "@types/react-router-dom": "4.2.7",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-responsive-carousel": "3.1.41",
+    "react-router-dom": "4.3.1",
+    "react-text-truncate": "0.13.1"
   }
 }
