--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "16.4.10",
+    "@types/react-dom": "16.0.7",
+    "@types/react-router-dom": "4.3.0",
+    "@types/react-virtualized": "9.18.6",
     "@types/swfobject": "2.2.27",
     "awesome-typescript-loader": "5.2.0",
     "copy-webpack-plugin": "4.5.2",
@@ -20,20 +24,18 @@
     "gulp-if": "2.0.2",
     "gulp-typescript": "5.0.0-alpha.3",
     "gulp-uglify": "3.0.1",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-responsive-carousel": "3.1.41",
+    "react-router-dom": "4.3.1",
+    "react-text-truncate": "0.13.1",
+    "react-virtualized": "9.20.1",
     "ts-loader": "4.4.2",
     "tslint": "5.11.0",
     "typescript": "3.0.1",
     "webpack": "4.16.4",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.4",
-    "webpack-stream": "5.1.0",
-    "@types/react": "16.4.6",
-    "@types/react-dom": "16.0.6",
-    "@types/react-router-dom": "4.2.7",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-responsive-carousel": "3.1.41",
-    "react-router-dom": "4.3.1",
-    "react-text-truncate": "0.13.1"
+    "webpack-stream": "5.1.0"
   }
 }
