+ Make MainWindowPreload store all additional functions it creates inside "window.Extended" instead of directly on the window + Make "window.Extended" globally regocnized as the new IMainWindowExternal interface + Add functions to the main window renderer that allows it to minimize, maximize and close the main window + Add a new TitleBar component and place it at the top of the main window renderer (it can move, min, max and close the window) + Refactor some of the colors in styles.css to use variables instead of hard coded values (so that themes can be supported later on)

--- a/tsconfig-main.json
+++ b/tsconfig-main.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "include": [
     "src/main/**/*",
-    "src/shared/**/*"
+    "src/shared/**/*",
+    "./typings/**/*"
   ]
 }
