+ Add "release"/"production" mode to the gulp file (add the "--production" argument after the cli command to enable it) (production mode uglifies the main & shared code and puts the app code in an app.asar fille) + Make the pack gulp task remove unecessary information from the package.json file before putting it in the package (like devDependencies and scripts)

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulp": "3.9.1",
     "gulp-if": "2.0.2",
     "gulp-typescript": "5.0.0-alpha.3",
-    "gulp-uglify": "3.0.1",
+    "gulp-uglify-es": "1.0.4",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-router-dom": "4.3.1",
@@ -38,6 +38,7 @@
     "webpack": "4.16.4",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.4",
-    "webpack-stream": "5.1.0"
+    "webpack-stream": "5.1.0",
+    "yargs": "12.0.1"
   }
 }
