+ Add isDev() to src/main/Util.ts (this is a copy of the npm package 'electron-is-dev' and it checks if the app is a debug or relase build at run-time) + Make DevTools only appear on startup in debug builds + Add a "release" npm script (it builds and packs in production mode, making a release build from the ground up in one command) + Make the pack gulp task only copy certain fields from "package.json" instead of removing certain fields (now i dont have to update this every time a new  unwanted top level property is added to package.json)

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "gulp build",
     "watch": "gulp watch",
     "pack": "gulp pack",
+    "release": "gulp build --production & gulp pack --production",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "electron ./build/main/index.js"
   },
-  "author": "",
+  "author": "https://bigbub.net",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
