--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "author": "https://bigbub.net",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "fast-xml-parser": "3.12.0"
+  },
   "devDependencies": {
     "@types/react": "16.4.10",
     "@types/react-dom": "16.0.7",
     "@types/react-router-dom": "4.3.0",
     "@types/react-virtualized": "9.18.6",
-    "@types/swfobject": "2.2.27",
     "awesome-typescript-loader": "5.2.0",
     "copy-webpack-plugin": "4.5.2",
     "electron": "2.0.6",
