--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch",
-    "pack": "gulp pack",
-    "release": "gulp build --production & gulp pack --production",
+    "pack:linux": "cross-env PACK_PLATFORM=linux PACK_ARCH=x64  gulp pack",
+    "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
+    "release:linux": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:linux\"",
+    "release:win32": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:win32\"",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "electron ./build/main/index.js"
   },
@@ -23,6 +25,7 @@
     "@types/react-virtualized": "9.18.6",
     "awesome-typescript-loader": "5.2.0",
     "copy-webpack-plugin": "4.5.2",
+    "cross-env": "^5.2.0",
     "electron": "2.0.6",
     "electron-packager": "12.1.0",
     "fs-extra": "7.0.0",
@@ -40,7 +43,6 @@
     "webpack": "4.16.4",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.4",
-    "webpack-stream": "5.1.0",
-    "yargs": "12.0.1"
+    "webpack-stream": "5.1.0"
   }
 }
