--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "fast-xml-parser": "3.12.0"
   },
   "devDependencies": {
-    "@types/react": "16.4.10",
-    "@types/react-dom": "16.0.7",
-    "@types/react-router-dom": "4.3.0",
-    "@types/react-virtualized": "9.18.6",
+    "@types/node": "^10.9.2",
+    "@types/react": "^16.4.11",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-router-dom": "^4.3.0",
+    "@types/react-virtualized": "^9.18.7",
     "awesome-typescript-loader": "5.2.0",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "^5.2.0",
@@ -41,7 +42,7 @@
     "tslint": "5.11.0",
     "typescript": "3.0.1",
     "webpack": "4.16.4",
-    "webpack-cli": "3.1.0",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "3.1.4",
     "webpack-stream": "5.1.0"
   }
