+ Add IAppPreferencesData (interface for what preferences there should be) + Add AppPreferences (manager of the current preferences data) + Add AppPreferencesFile (static class for loading, saving and parsing the preferences file) + Add preferences file to .gitignoree

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ package-lock.json
 # Temp
 /temp
 
-# Config (created during testing)
+# Config & Preferences (created during testing)
 /config.json
+/preferences.json
