--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "electron ./build/main/index.js"
   },
   "author": "https://bigbub.net",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "fast-xml-parser": "3.12.0"
   },
