Add Game Playlists Add new page PlaylistPage, where all playlists are shown in a list and there is button at the bottom which creates a new playlist when clicked. Add code for loading, saving and parsing playlists (eveen though all of it is not accessible in the application). Add generic function to shared/Util that recursively goes through a folder and all of its sub-folders and calls back for each file. Change "central" object to created with the app (instead of when the games are loaded) and so it has flags telling if the games and playlists are done loading.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.0",
     "@types/react-virtualized": "^9.18.7",
+    "@types/uuid": "3.4.4",
     "awesome-typescript-loader": "5.2.0",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "^5.2.0",
@@ -39,6 +40,7 @@
     "ts-loader": "4.4.2",
     "tslint": "5.11.0",
     "typescript": "3.0.1",
+    "uuid": "3.3.2",
     "webpack": "4.16.4",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "3.1.4",
