--- a/package.json
+++ b/package.json
@@ -18,34 +18,34 @@
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
-    "fast-xml-parser": "3.12.0"
+    "fast-xml-parser": "3.12.7"
   },
   "devDependencies": {
-    "@types/node": "^10.9.2",
-    "@types/react": "^16.4.11",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-router-dom": "^4.3.0",
-    "@types/react-virtualized": "^9.18.7",
+    "@types/node": "10.12.5",
+    "@types/react": "16.7.3",
+    "@types/react-dom": "16.0.9",
+    "@types/react-router-dom": "4.3.1",
+    "@types/react-virtualized": "9.18.7",
     "@types/uuid": "3.4.4",
-    "awesome-typescript-loader": "5.2.0",
-    "copy-webpack-plugin": "4.5.2",
-    "cross-env": "^5.2.0",
-    "electron": "2.0.8",
-    "electron-packager": "12.1.0",
-    "fs-extra": "7.0.0",
+    "awesome-typescript-loader": "5.2.1",
+    "copy-webpack-plugin": "4.6.0",
+    "cross-env": "5.2.0",
+    "electron": "3.0.8",
+    "electron-packager": "12.2.0",
+    "fs-extra": "7.0.1",
     "gulp": "3.9.1",
     "gulp-typescript": "5.0.0-alpha.3",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "16.6.1",
+    "react-dom": "16.6.1",
     "react-router-dom": "4.3.1",
-    "react-virtualized": "9.20.1",
-    "ts-loader": "4.4.2",
+    "react-virtualized": "9.21.0",
+    "ts-loader": "5.3.0",
     "tslint": "5.11.0",
-    "typescript": "3.0.1",
+    "typescript": "3.1.6",
     "uuid": "3.3.2",
-    "webpack": "4.16.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "3.1.4",
-    "webpack-stream": "5.1.0"
+    "webpack": "4.25.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10",
+    "webpack-stream": "5.1.1"
   }
 }
