--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/node": "10.12.5",
     "@types/react": "16.7.3",
     "@types/react-dom": "16.0.9",
+    "@types/react-redux": "6.0.9",
     "@types/react-router-dom": "4.3.1",
     "@types/react-virtualized": "9.18.7",
     "@types/uuid": "3.4.4",
     "awesome-typescript-loader": "5.2.1",
+    "connected-react-router": "5.0.1",
     "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
     "electron": "3.0.8",
@@ -37,10 +39,14 @@
     "gulp-typescript": "5.0.0-alpha.3",
     "react": "16.6.1",
     "react-dom": "16.6.1",
+    "react-redux": "5.1.1",
     "react-router-dom": "4.3.1",
     "react-virtualized": "9.21.0",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.5",
     "ts-loader": "5.3.0",
     "tslint": "5.11.0",
+    "typesafe-actions": "2.0.4",
     "typescript": "3.1.6",
     "uuid": "3.3.2",
     "webpack": "4.25.1",
