--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tslint": "5.11.0",
     "typesafe-actions": "2.0.4",
     "typescript": "3.1.6",
+    "utility-types": "2.1.0",
     "uuid": "3.3.2",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2",
