--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "fast-xml-parser": "3.12.7",
+    "follow-redirects": "1.5.10",
     "yauzl": "2.10.0"
   },
   "devDependencies": {
