--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "fast-xml-parser": "3.12.7",
     "follow-redirects": "1.5.10",
+    "uuid-validate": "0.0.3",
     "yauzl": "2.10.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react-router-dom": "4.3.1",
     "@types/react-virtualized": "9.18.7",
     "@types/uuid": "3.4.4",
+    "@types/uuid-validate": "0.0.0",
     "@types/yauzl": "2.9.0",
     "awesome-typescript-loader": "5.2.1",
     "connected-react-router": "5.0.1",
