build: make the "build" and "watch" gulp tasks faster and simpler
The biggest change is that the gulp tasks use "child_process.exec"
instead of the gulp-ified wrapper modules. This makes them way faster.
It does however make the console output less pleasant.
The "renderer" folder in the "app.asar" file is now renamed to "window".
This is because "tsc" outputs files in the "renderer" folder now.

--- a/package.json
+++ b/package.json
@@ -4,24 +4,38 @@
   "description": "A desktop application used to browse, manage and play games from the Flashpoint project",
   "main": "main/index.js",
   "scripts": {
+    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "start": "electron ./build/main/index.js",
     "build": "gulp build",
     "watch": "gulp watch",
+    "pack": "gulp pack",
     "pack:linux": "cross-env PACK_PLATFORM=linux PACK_ARCH=x64  gulp pack",
     "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
     "pack:all": "cross-env PACK_PLATFORM=all PACK_ARCH=all gulp pack",
+    "release": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack\"",
     "release:linux": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:linux\"",
     "release:win32": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:win32\"",
-    "release:all": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:all\"",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "electron ./build/main/index.js"
+    "release:all": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:all\""
   },
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
+    "connected-react-router": "5.0.1",
+    "electron": "3.0.8",
     "fast-xml-parser": "3.12.7",
     "follow-redirects": "1.5.10",
     "uuid-validate": "0.0.3",
-    "yauzl": "2.10.0"
+    "yauzl": "2.10.0",
+    "react": "16.6.1",
+    "react-dom": "16.6.1",
+    "react-redux": "5.1.1",
+    "react-router-dom": "4.3.1",
+    "react-virtualized": "9.21.0",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.5",
+    "typesafe-actions": "2.0.4",
+    "utility-types": "2.1.0",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@types/node": "10.12.5",
@@ -33,31 +47,14 @@
     "@types/uuid": "3.4.4",
     "@types/uuid-validate": "0.0.0",
     "@types/yauzl": "2.9.0",
-    "awesome-typescript-loader": "5.2.1",
-    "connected-react-router": "5.0.1",
-    "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
-    "electron": "3.0.8",
     "electron-packager": "12.2.0",
     "fs-extra": "7.0.1",
     "gulp": "3.9.1",
-    "gulp-typescript": "5.0.0-alpha.3",
-    "react": "16.6.1",
-    "react-dom": "16.6.1",
-    "react-redux": "5.1.1",
-    "react-router-dom": "4.3.1",
-    "react-virtualized": "9.21.0",
-    "redux": "4.0.1",
-    "redux-devtools-extension": "2.13.5",
     "ts-loader": "5.3.0",
     "tslint": "5.11.0",
-    "typesafe-actions": "2.0.4",
     "typescript": "3.1.6",
-    "utility-types": "2.1.0",
-    "uuid": "3.3.2",
-    "webpack": "4.25.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10",
-    "webpack-stream": "5.1.1"
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.2.1"
   }
 }
