build: scripts use local dependencies for "gulp", "tsc" and "webpack"
This means that you no longer have to install any package globally.

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "A desktop application used to browse, manage and play games from the Flashpoint project",
   "main": "main/index.js",
   "scripts": {
-    "start": "electron ./build/main/index.js",
-    "build": "gulp build",
-    "watch": "gulp watch",
-    "pack": "gulp pack",
-    "pack:linux": "cross-env PACK_PLATFORM=linux PACK_ARCH=x64  gulp pack",
-    "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
-    "pack:all": "cross-env PACK_PLATFORM=all PACK_ARCH=all gulp pack",
-    "release": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack\"",
-    "release:linux": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:linux\"",
-    "release:win32": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:win32\"",
-    "release:all": "cross-env-shell NODE_ENV=production \"gulp build && npm run pack:all\""
+    "start": "npx electron ./build/main/index.js",
+    "build": "npx gulp build",
+    "watch": "npx gulp watch",
+    "pack": "npx gulp pack",
+    "pack:linux": "npx cross-env PACK_PLATFORM=linux PACK_ARCH=x64 npx gulp pack",
+    "pack:win32": "npx cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 npx gulp pack",
+    "pack:all": "npx cross-env PACK_PLATFORM=all PACK_ARCH=all npx gulp pack",
+    "release": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
+    "release:linux": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:linux\"",
+    "release:win32": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:win32\"",
+    "release:all": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:all\""
   },
   "author": "Jesper Gustafsson",
   "license": "MIT",
