--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron": "3.0.8",
     "fast-xml-parser": "3.12.7",
     "follow-redirects": "1.5.10",
+    "fs-extra": "7.0.1",
     "react": "16.6.1",
     "react-dom": "16.6.1",
     "react-redux": "5.1.1",
@@ -33,13 +34,14 @@
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.5",
     "typesafe-actions": "2.0.4",
+    "utility-types": "2.1.0",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
-    "utility-types": "2.1.0",
     "yauzl": "2.10.0"
   },
   "devDependencies": {
     "@types/node": "10.12.5",
+    "@types/fs-extra": "^5.0.4",
     "@types/react": "16.7.3",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
@@ -50,7 +52,6 @@
     "@types/yauzl": "2.9.0",
     "cross-env": "5.2.0",
     "electron-packager": "12.2.0",
-    "fs-extra": "7.0.1",
     "gulp": "3.9.1",
     "ts-loader": "5.3.0",
     "tslint": "5.11.0",
