--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "yauzl": "2.10.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "5.0.4",
     "@types/node": "10.12.5",
-    "@types/fs-extra": "^5.0.4",
     "@types/react": "16.7.3",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
@@ -56,7 +56,7 @@
     "ts-loader": "5.3.0",
     "tslint": "5.11.0",
     "typescript": "3.1.6",
-    "webpack": "^4.28.1",
-    "webpack-cli": "^3.2.1"
+    "webpack": "4.28.1",
+    "webpack-cli": "3.2.1"
   }
 }
