build: import and set up eslint
Add eslint and related packages as dev-dependencies.
Add a eslintrc file with hand picked settings for this project.
Add a new script to package.json ("lint").

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "npx gulp watch",
     "pack": "npx gulp pack",
     "test": "npx jest",
+    "lint": "npx eslint ./src/**/*.{ts,tsx}",
     "pack:linux": "npx cross-env PACK_PLATFORM=linux PACK_ARCH=x64 npx gulp pack",
     "pack:win32": "npx cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 npx gulp pack",
     "pack:darwin": "npx cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 npx gulp pack",
@@ -52,8 +53,11 @@
     "@types/uuid": "3.4.4",
     "@types/uuid-validate": "0.0.0",
     "@types/yauzl": "2.9.0",
+    "@typescript-eslint/eslint-plugin": "1.13.0",
+    "@typescript-eslint/parser": "1.13.0",
     "cross-env": "5.2.0",
     "electron-packager": "12.2.0",
+    "eslint": "6.1.0",
     "gulp": "4.0.0",
     "jest": "24.8.0",
     "ts-jest": "24.0.2",
