--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "utility-types": "3.7.0",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
+    "which": "1.3.1",
     "yauzl": "2.10.0"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/react-virtualized": "9.21.4",
     "@types/uuid": "3.4.5",
     "@types/uuid-validate": "0.0.1",
+    "@types/which": "1.3.1",
     "@types/yauzl": "2.9.1",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
