feat: Service Api improvements, utils for future renderer services

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-virtualized": "9.21.1",
     "redux": "4.0.4",
     "redux-devtools-extension": "2.13.8",
+    "tree-kill": "1.2.1",
     "typesafe-actions": "4.4.2",
     "utility-types": "3.7.0",
     "uuid": "3.3.2",
