--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,24 +4,47 @@ on: [push]
 
 jobs:
   build:
-    name: Build for Windows and Linux
+    name: Build for Linux
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
+      uses: actions/
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, release for win32 and linux
+    - name: npm install, build, release for linux
       run: |
         npm install
         npm run build --if-present
-        npm run release:win32
+        npm run release
+      env:
+        CI: true
+       
+  build:
+    name: Build for Windows
+    runs-on: windows-latest
+    
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x]
+        
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      uses: actions/
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, build, release for win32
+      run: |
+        npm install
+        npm run build --if-present
         npm run release
       env:
         CI: true
