--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: ESLint checks
+      uses: gimenete/eslint-action@1.0
     - name: npm install, build, release for linux
       run: |
         npm install
