--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,12 +18,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: ESLint checks
-      uses: gimenete/eslint-action@1.0
     - name: npm install, build, release for linux
       run: |
         npm install
         npm run build --if-present
         npm run release
+        cd dist
+        7z a -r flashpoint-latest-${{ matrix.os }}.zip *
       env:
         CI: true
