--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,20 +18,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: ESLint checks
+      uses: gimenete/eslint-action@1.0
     - name: npm install, build, release for linux
       run: |
         npm install
         npm run build --if-present
         npm run release
-        cd dist
-        7z a -r flashpoint-latest-${{ matrix.os }}.zip *
       env:
         CI: true
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: flashpoint-latest-${{ matrix.os }}.zip
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
