--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, release for linux
+    - name: npm install, build, release for ${{ matrix.os }}
       run: |
         npm install
         npm run build --if-present
