--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,18 @@ jobs:
         npm install
         npm run build --if-present
         npm run release
+        cd dist
+        7z a -r ${{ matrix.os }}.zip *
       env:
         CI: true
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          /dist/${{ matrix.os }}.zip
+        name: test
+        prerelease: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
